# file-organizer

./: .gitignore  File_Organizer.py  File_Organizer.spec  LICENSE  README.md  TypeFile.py  config.json  install.sh  notices.py  pyproject.toml  requirements.txt
.exec/: File_Organizer.desktop
file_organizer/: __main__.py  button_action.py  configLoader.py  config_manager.py  fileCategorize.py  handler.py  icons_path.py  notification.py
tests/: test_fileCategorize.py  test_open_folder.py
