[tool.poetry]
name = "file-organizer"
version = "0.2.0"
description = "A file organizer from the Downloads folder"
authors = ["cleverson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^4.0.1"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
