[tool.poetry]
name = "file-organizer"
version = "2.0.0"
description = "A file organizer from the Downloads folder"
authors = ["cleverson"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
watchdog = "^4.0.1"
pytest = "^8.2.2"
desktop-notifier = "^5.0.1"
ruff = "^0.6.2"
taskipy = "^1.13.0"
pyinstaller = "^6.10.0"
poetry-auto-export = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
run  = 'python -m file_organizer'
test = 'python -m unittest -v'
