[project]
name = "file-organizer"
version = "2.0.0"
description = "A file organizer from the Downloads folder"
authors = [
    {name = "Cleverson Silva", email = "cleverson.silva.contact@gmail.com"}
]
license = "MIT"
readme = "README.md"


requires-python = ">=3.11,<3.14"
dependencies = [
    "watchdog (>=4.0.1,<5.0)",
    "desktop-notifier (>=5.0.1,<6.0)",
    "pyinstaller (>=6.10,<7.0)"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ruff = "^0.6.2"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
run  = 'python -m file_organizer'
test = 'python -m unittest -v'
